fixed calculator alignment

--- a/carbon_calculator/src/components/Navbar.css
+++ b/carbon_calculator/src/components/Navbar.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 .Navbar {
-    margin: 70px 20px;
+    position: absolute; 
+    top: 100px;
+    margin: 0 20px;
     padding: 10px 0;
     display: flex;
     align-items: flex-start;
