--- a/carbon_calculator/src/forms/Forms.css
+++ b/carbon_calculator/src/forms/Forms.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 .form-container {
-    position: relative;
-    top: -250px;
+    position: absolute;
+    top: 100px;
     background-color: rgb(0, 0, 0);
     width: 35%;
     border-radius: 8px;
@@ -47,7 +47,7 @@ form {
     font-size: 26px;
     font-weight: bold;
     background-color: transparent;
-    color: rgb(185, 185, 185);
+    color: rgb(218, 218, 218);
     border: 2px solid white;
     border-radius: 2px;
     transition-duration: 300ms;
