--- a/carbon_calculator/src/pages/Calculator.css
+++ b/carbon_calculator/src/pages/Calculator.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+.Calculator {
+    margin: 0 40px;
+}
+
 .header {
     margin: 10px 20px;
     display: flex;
@@ -47,7 +51,7 @@
 
 .route-title {
     position: relative;
-    top: 50px;
+    top: -20px;
     text-align: center;
     font-size: 35px;
     font-family: 'Nunito';
